[gd_scene load_steps=3 format=3 uid="uid://dindykuocxgo6"]

[ext_resource type="Script" path="res://scripts/editor_container.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://qu8m4to34n3s" path="res://scenes/rich_text_label.tscn" id="2"]

[node name="editor_container" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controls" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 36.0
alignment = 2

[node name="search_bar" type="LineEdit" parent="controls"]
visible = false
offset_right = 802.0
offset_bottom = 43.0
hint_tooltip = "Search for artefacts in your library"
size_flags_horizontal = 3
placeholder_text = "Search"
caret_blink = true

[node name="search" type="Button" parent="controls"]
visible = false
hint_tooltip = "Start search"
text = "‚ñ∂"

[node name="settings" type="Button" parent="controls"]
visible = false
hint_tooltip = "Open settings"
text = "‚öô"

[node name="open" type="Button" parent="controls"]
offset_left = 810.0
offset_right = 850.0
offset_bottom = 36.0
hint_tooltip = "Open file in new editor"
text = "üìÅ"

[node name="add_container" type="Button" parent="controls"]
offset_left = 858.0
offset_right = 898.0
offset_bottom = 36.0
hint_tooltip = "Add a new container"
theme_override_font_sizes/font_size = 16
text = "üìë"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout" type="OptionButton" parent="controls"]
offset_left = 906.0
offset_right = 980.0
offset_bottom = 36.0
hint_tooltip = "Change layout"
text = "üìë"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="Button" parent="controls"]
offset_left = 988.0
offset_right = 1024.0
offset_bottom = 36.0
hint_tooltip = "Close container and all children"
text = "‚úñ"

[node name="layout_container" type="TabContainer" parent="."]
offset_top = 44.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="tabbed" type="TabContainer" parent="layout_container"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = -8.0

[node name="vertical" type="VBoxContainer" parent="layout_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1
alignment = 1

[node name="horizontal" type="HBoxContainer" parent="layout_container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 16.0
offset_right = -8.0
offset_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1
alignment = 1

[node name="file_dialog" type="FileDialog" parent="."]
mode_overrides_title = false
access = 2
current_dir = "/home/user/Godot/dingsda"
current_path = "/home/user/Godot/dingsda/"

[node name="search_panel" type="PopupPanel" parent="."]

[node name="rich_text_label" parent="search_panel" instance=ExtResource( "2" )]
theme_override_font_sizes/normal_font_size = 16

[connection signal="text_submitted" from="controls/search_bar" to="." method="_on_search_bar_text_submitted"]
[connection signal="pressed" from="controls/search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="controls/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="controls/open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="controls/add_container" to="." method="_on_add_container_pressed"]
[connection signal="item_selected" from="controls/layout" to="." method="_on_layout_item_selected"]
[connection signal="pressed" from="controls/close" to="." method="_on_close_pressed"]
[connection signal="file_selected" from="file_dialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="meta_clicked" from="search_panel/rich_text_label" to="." method="_on_rich_text_label_meta_clicked"]
